--- a/style.css
+++ b/style.css
@@ -1,9 +1,7 @@
 #container{
-    width: 1000px;
-    height: 300px;
-    border: 1px solid grey;
+    width: 1050px;
     margin: 0 auto;
-    text-align: center;
+    
 }
 
 #header{
@@ -14,8 +12,10 @@
 #brand_name{
     color: rgb(75, 42, 165);
     float: left;
-    width: 50%;
-    margin: auto 0;
+}
+
+#brand_name h1 a{
+    text-decoration: none;
 }
 
 .text{
@@ -26,7 +26,7 @@
     color: #E36A0C;
     background: white url("images/search-icon.png") right center;
     background-repeat: no-repeat;
-    
+    border: 1px solid #C8D03E;
 }
 
 .submit{
@@ -35,6 +35,7 @@
     font-weight: bold;
     color: white;
     background: #A751D6;
+    border: 1px solid #DCD5E1;
 }
 
 #search-bar{
@@ -45,4 +46,45 @@
     padding: 15px 15px 0px 15px;
     margin-top: 20px;
     
+}
+
+.clear{
+    clear: both;
+}
+
+ul{
+    list-style: none;
+}
+
+#menu ul li{
+    float: left;
+    padding: 0 10px;
+    height: 30px;
+    border-right: 1px solid #5D12E7;
+}
+
+#menu{
+    height: 70px;
+    background: linear-gradient(#F8F594, #D5D533);
+    padding: 7px 0;
+}
+
+#menu ul li a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 17px;
+    color: #5D12E7;
+    line-height: 30px;
+    transition: font-size 0.3s ease;
+    -webkit-transition: font-size 0.3s ease;
+}
+
+#menu ul li:last-child{
+    border-right: none;
+} 
+
+#menu ul li a:hover, #menu ul li a.active{
+    font-size: 20px;
+    font-weight: bold;
+    color: purple;
 }
