Finished the introduction

--- a/style.css
+++ b/style.css
@@ -88,3 +88,20 @@ ul{
     font-weight: bold;
     color: purple;
 }
+
+#introduction{
+    background: linear-gradient(#E5F2BB, #B7E952);
+    padding: 30px;
+    margin: 16px 0;
+}
+
+#introduction h3{
+    font-size: 45px;
+    color: #316901;
+}
+
+#introduction p{
+    font-size: 25px;
+    color: #628F19;
+    text-align: justify;
+}
