--- a/style.css
+++ b/style.css
@@ -105,3 +105,60 @@ ul{
     color: #628F19;
     text-align: justify;
 }
+
+.sidebar{
+    height : 500px;
+    width : 450px;
+    border : 1px solid gray;
+    border-radius: 20px; 
+    padding : 10px 30px;
+}
+
+#leftsidebar{
+    float: left;
+}
+
+#rightsidebar{
+    float: right;
+}
+
+.sidebar h3{
+    color: rgb(75, 42, 165);
+    font-size: 30px;
+}
+
+#leftsidebar ul{
+    padding-top: 10px;
+}
+
+#leftsidebar ul li{
+    padding: 6px 0 6px 10px;
+    list-style-image: url(images/arrow.png);
+    padding-left: 10px;
+}
+
+#rightsidebar ul{
+    padding-top: 10px;
+}
+
+#rightsidebar ul li{
+    padding: 10px 0px 10px 70px;
+    list-style-image: url(images/tick.png);
+    padding-left: 10px;
+}
+
+.sidebar ul li a{
+    text-decoration: none;
+    font-size: 20px;
+    color: #5D12E7;
+    transition: font-size 0.3s ease;
+    -webkit-transition: font-size 0.3s ease;
+}
+
+.sidebar ul li a:hover, .sidebar ul li a.active{
+    text-decoration: none;
+    color: #B314DB;
+    font-size: 25px;
+    font-weight: bold;
+    
+}
