--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    font: Arial, Helvetica, sans-serif;
+}
+
 #container{
     width: 1050px;
     margin: 0 auto;
@@ -160,5 +164,11 @@ ul{
     color: #B314DB;
     font-size: 25px;
     font-weight: bold;
-    
+}
+
+.footer{
+    height: 60px;
+    background: linear-gradient(#F6F390, #D5D533);
+    padding: 10px 30px;
+    margin-top: 15px;
 }
